# fileFire

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
bindings/flutter/: pubspec.yaml
bindings/flutter/.dart_tool/: package_config.json  package_config_subset  package_graph.json
bindings/flutter/lib/: filefire.dart
bindings/flutter/lib/src/: annotation.dart  document.dart  exceptions.dart  ffi_bridge.dart  filefire.dart  metadata.dart
cloud/api/: Cargo.toml
cloud/api/src/: handlers.rs  main.rs  middleware.rs  models.rs
cloud/docker/: Dockerfile  docker-compose.yml
core/: Cargo.toml
core/src/: document.rs  engine.rs  error.rs  ffi.rs  lib.rs  metadata.rs  plugin.rs  wasm.rs
core/src/document/: image.rs  mod.rs  office.rs  pdf.rs  processor.rs  text.rs
docs/: architecture.md  plugins.md
examples/flutter_app/: .flutter-plugins-dependencies  pubspec.yaml
examples/flutter_app/.dart_tool/: package_config.json  package_config_subset  package_graph.json
examples/flutter_app/lib/: main.dart
plugins/ai/: Cargo.toml
plugins/ai/src/: lib.rs
plugins/ocr/: Cargo.toml
plugins/ocr/src/: lib.rs
plugins/signature/: Cargo.toml
plugins/signature/src/: lib.rs
plugins/watermark/: Cargo.toml
plugins/watermark/src/: lib.rs
