[workspace]
resolver = "2"

members = [
    "core",
    "plugins/ocr",
    "plugins/watermark", 
    "plugins/ai",
    "plugins/signature",
    "cloud/api"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["FileFire Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mubarakhammed/fileFire"
homepage = "https://github.com/mubarakhammed/fileFire"
documentation = "https://docs.rs/filefire"
readme = "README.md"
keywords = ["pdf", "document", "cross-platform", "sdk"]
categories = ["multimedia", "parsing", "wasm"]

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"

# PDF processing
pdf = "0.8"
lopdf = "0.30"

# Image processing
image = "0.24"

# FFI
libc = "0.2"

# WASM
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"

# Plugin system
dlopen2 = "0.5"
libloading = "0.8"

# Async
async-trait = "0.1"